@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-07T01:16:02Z",
-  "count_outdated" : 1596,
-  "uniques_outdated" : 1116,
-  "count" : 1609,
-  "uniques" : 1129,
+  "timestamp" : "2025-10-08T01:15:49Z",
+  "count_outdated" : 1597,
+  "uniques_outdated" : 1117,
+  "count" : 1610,
+  "uniques" : 1130,
   "clones" : [
-    {
-      "timestamp": "2025-09-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-25T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-10-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
