@@ -1,3 +1,12 @@
+2025-10-08T01:15:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18330738131 # 790
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-08
+* notice: last 14d: unq all: 4 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 1116 1596 / 1129 1609
+* notice: next accum: outdated-unq outdated-all / unq all: 1117 1597 / 1130 1610
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-24] / [2025-10-07]
+
 2025-10-07T01:16:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18299071133 # 789
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-07
